force-app/src/objects/c2g__codaTransactionLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>The line items on a transaction.</description>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountRollup__c</fullName>
        <formula>IF( ISNULL( c2g__Transaction__r.c2g__Account__c ), &apos;False&apos;, &apos;True&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTradingCurrencyMismatch__c</fullName>
        <formula>c2g__AccountCurrency__r.Name  &lt;&gt;  c2g__Account__r.c2g__CODAAccountTradingCurrency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Trading Currency Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AccountType__c</fullName>
        <formula>IF( c2g__Account__r.c2g__CODAIntercompanyAccount__c, &apos;Intercompany&apos;,
		IF(AND(c2g__Account__r.c2g__CODAAccountsPayableControl__c != NULL, c2g__Account__r.c2g__CODAAccountsReceivableControl__c != NULL, c2g__Account__r.c2g__CODAAccountsPayableControl__c = c2g__Account__r.c2g__CODAAccountsReceivableControl__c),
		&apos;Customer - Vendor&apos;,
		IF(AND(c2g__Account__r.c2g__CODAAccountsPayableControl__c != NULL, c2g__Account__r.c2g__CODAAccountsPayableControl__c =  c2g__GeneralLedgerAccount__c) ,
		&apos;Vendor&apos;,
		IF(AND(c2g__Account__r.c2g__CODAAccountsReceivableControl__c != NULL, c2g__Account__r.c2g__CODAAccountsReceivableControl__c = c2g__GeneralLedgerAccount__c),
		&apos;Customer&apos;,
		NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountValue__c</fullName>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Reclassify Profits field is updated accordingly.</inlineHelpText>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ArchiveSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archive Set</label>
        <referenceTo>c2g__ArchiveSet__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAgeBand__c</fullName>
        <formula>IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Max__c
), 
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand1Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand2Label__c,

IF( 
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand3Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand4Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand5Label__c,

IF(
OR( 
ISNULL( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c ),
c2g__AsOfAge__c &lt;= $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Max__c
),
$Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeBand6Label__c,

null
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfAge__c</fullName>
        <formula>c2g__AsOfDate__c - IF( $Setup.c2g__AsOfAgingReportSettings__c.c2g__AgeByDueDate__c, c2g__DueDate__c, c2g__Transaction__r.c2g__TransactionDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfDualValue__c</fullName>
        <label>As of Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfHomeValue__c</fullName>
        <label>As of Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AsOfName__c</fullName>
        <label>As of Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceUpdateDimensionsPriorToAmend__c</fullName>
        <description>When amending the dimensions of a transaction line item on any document, this field temporarily stores the existing dimension values, so that when the Balance Update process runs, the Reporting Balance values are correct.</description>
        <label>Balance Update Dimensions Prior to Amend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceUpdate__c</fullName>
        <description>Indicates whether the transaction line has updated the Reporting Balances records or not. It is only relevant if you use On Demand update of the Reporting Balances from Transactions. It will mark the balance update for the line as &quot;Pending&quot; or &quot;Complete&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Indicates whether the transaction line has updated the Reporting Balances records or not. It is only relevant if you use On Demand update of the Reporting Balances from Transactions. It will mark the balance update for the line as &quot;Pending&quot; or &quot;Complete&quot;</inlineHelpText>
        <label>Balance Update</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Bank Account Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsBankAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliationStatus__c</fullName>
        <formula>IF( ISNULL( c2g__DateCanceled__c ), TEXT(c2g__BankReconciliation__r.c2g__ReconciliationStatus__c), &apos;Canceled&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Reconciliation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Category field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Cash Flow Adjustable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Line Summary field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Line Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(Gain) / Loss on Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>(Gain) / Loss on Investment Disposals</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Inventory</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Receivables</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Depreciation &amp; Amortization</fullName>
                </value>
                <value>
                    <fullName>Dividends on Common Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends on Preference Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends Received</fullName>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Common Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Payables</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Preference Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Purchase of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Purchase of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sale of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DateCanceled__c</fullName>
        <label>Date Canceled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DaysOverdue__c</fullName>
        <formula>IF(TODAY() - c2g__DueDate__c&lt;0,0,TODAY() - c2g__DueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 1 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension1Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1Value__c</fullName>
        <label>Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 2 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension2Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2Value__c</fullName>
        <label>Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 3 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension3Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3Value__c</fullName>
        <label>Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue1__c</fullName>
        <label>Discount Account Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue2__c</fullName>
        <label>Discount Account Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountAccountValue3__c</fullName>
        <label>Discount Account Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate1__c</fullName>
        <label>Discount Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate2__c</fullName>
        <label>Discount Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate3__c</fullName>
        <label>Discount Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue1__c</fullName>
        <label>Discount Document Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue2__c</fullName>
        <label>Discount Document Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountValue3__c</fullName>
        <label>Discount Document Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDocumentCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <formula>IF(c2g__Transaction__r.c2g__DocumentNumber__c &lt;&gt; null,if( BEGINS( c2g__Transaction__r.c2g__DocumentNumber__c , &quot;SIN&quot;) &amp;&amp; c2g__Transaction__r.c2g__SalesInvoice__c &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__SalesInvoice__c ,c2g__Transaction__r.c2g__DocumentNumber__c)  , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;SCR&quot;) &amp;&amp; c2g__Transaction__r.c2g__SalesCreditNote__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__SalesCreditNote__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;CRV&quot;) &amp;&amp; c2g__Transaction__r.c2g__CurrencyRevaluation__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__CurrencyRevaluation__c ,c2g__Transaction__r.c2g__DocumentNumber__c) ,
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;PIN&quot;) &amp;&amp; c2g__Transaction__r.c2g__PayableInvoice__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__PayableInvoice__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;PCR&quot;) &amp;&amp; c2g__Transaction__r.c2g__PayableCreditNote__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__PayableCreditNote__c ,c2g__Transaction__r.c2g__DocumentNumber__c) ,
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;JNL&quot;) &amp;&amp; c2g__Transaction__r.c2g__Journal__c  &lt;&gt; null , HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__Journal__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;BD&quot;) &amp;&amp; c2g__Transaction__r.c2g__BillingDocument__c  &lt;&gt; null , HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__BillingDocument__c ,c2g__Transaction__r.c2g__DocumentNumber__c) , 
if( BEGINS(c2g__Transaction__r.c2g__DocumentNumber__c, &quot;CSH&quot;) &amp;&amp; c2g__Transaction__r.c2g__CashEntry__c  &lt;&gt; null, HYPERLINK(&quot;/&quot; &amp;  c2g__Transaction__r.c2g__CashEntry__c ,c2g__Transaction__r.c2g__DocumentNumber__c),c2g__Transaction__r.c2g__DocumentNumber__c)
))))))),&quot;&quot;)</formula>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Document Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxTotal__c</fullName>
        <formula>c2g__DocumentTaxValue1__c + c2g__DocumentTaxValue2__c + c2g__DocumentTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue1__c</fullName>
        <label>Document Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue2__c</fullName>
        <label>Document Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxValue3__c</fullName>
        <label>Document Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTaxableValue__c</fullName>
        <label>Document Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentsToMatch__c</fullName>
        <description>Stores the documents to match with the cash entry line.</description>
        <inlineHelpText>Displays the documents to match with the related cash entry line.</inlineHelpText>
        <label>Documents to Match</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDualCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>The due date on matchable lines</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__EliminationTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Elimination Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Eliminated Transaction Line Items</relationshipLabel>
        <relationshipName>EliminatedTransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludefromCashFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the bank account line item is excluded from the Cash Flow Analytics dashboard in Business Analytics.</description>
        <inlineHelpText>If selected, indicates that the bank account line item is excluded from the Cash Flow Analytics dashboard in Business Analytics.</inlineHelpText>
        <label>Exclude from Cash Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Expense)</relationshipLabel>
        <relationshipName>TransactionLineItemsExpense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsGeneralLedgerCurr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccountValue__c</fullName>
        <label>General Ledger Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Account)</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCredits__c</fullName>
        <description>Shows the credit value in home currency. This value is taken from the Home Value field, when it is a negative value.</description>
        <formula>IF(c2g__HomeValue__c  &lt;  0,  c2g__HomeValue__c * -1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsHomeCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeDebits__c</fullName>
        <description>Shows the debit value in home currency. This value is taken from the Home Value field, when it is a positive value.</description>
        <formula>IF(c2g__HomeValue__c &gt; 0, c2g__HomeValue__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Debits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxTotal__c</fullName>
        <formula>c2g__HomeTaxValue1__c + c2g__HomeTaxValue2__c + c2g__HomeTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue1__c</fullName>
        <label>Home Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue2__c</fullName>
        <label>Home Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxValue3__c</fullName>
        <label>Home Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeTaxableValue__c</fullName>
        <label>Home Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>